--- a/src/App.css
+++ b/src/App.css
@@ -53,19 +53,20 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 16px;
   padding: 20px;
-  background-color: #f9f9f9;
+  
 }
 
 .blog-list {
   padding: 20px;
-  background-color: #f9f9f9;
+  
 }
 
 .blog-list-title {
-  font-size: 2rem;
+  font-size: 2.25rem;
   margin-bottom: 20px;
   text-align: center;
-  color: #333;
+  font-family: serif;
+  
 }
 
 .blog-list-grid {
@@ -77,15 +78,14 @@
 
 .our-locations {
   padding: 20px;
-  background-color: #f9f9f9;
+ 
 }
 
 .locations-title {
-  font-size: 2rem;
+  font-size: 2.25rem;
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
-}
+font-family: serif;}
 
 .locations-grid {
   display: grid;
