--- a/src/styles/blogcard.css
+++ b/src/styles/blogcard.css
@@ -12,8 +12,10 @@
   }
   
   .blog-image {
+    aspect-ratio: 1.5;
     width: 100%;
     height: auto;
+    object-fit: cover;
   }
   
   .blog-content {
