--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 16px;
   padding: 20px;
-  
+  background-color:  #FFF9D760;
 }
 
 .blog-list {
