--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,5 @@
+
+
 /* Header */
 .logo{
     /* width: 0rem; */
@@ -7,7 +9,7 @@
 .logoname{
     font-family: FontRegular;
     font-size: 2rem;
-    color: maroon;
+    color: rgb(120, 29, 66);
 }
 .searchbox{
     display: flex;
@@ -26,22 +28,50 @@
     background-size: cover;
     width: 2rem;
     height: 2rem;
+    color: rgb(120, 29, 66);
 }
+.icon_search:hover{
+    color: #C65D7B;
 
-.icon_heart :hover{
-    color: indianred;
-    /* transform: scale(1.); */
 }
+.menu-item{
+    color: rgb(120, 29, 66);
+}
+.menu-item:hover{
+    color: #C65D7B;
+}
+ 
+.icon_heart :hover{
+    height: 1rem;
+    width: 1rem;
+    
+} 
+/*
 .icon_user :hover{
     transform: scale(1.1);
-}
+} */
 
 /* Homepage starts */
 .jewel_type{
     margin-top: 0;
 }
 .rfm-marquee-container{
-    background-color: indianred;
-    color: white;
+    background-color: #610C63;
+    color: #FFF9D7;
     margin-bottom: 0.5rem;
+}
+
+.banner{
+    background-color: #FFF9D760;
+}
+.banner-title1{
+    color: #610C63;
+}
+
+.banner-title2{
+    color: #C65D7B;
+}
+.limited-countdown{
+    background-color: #EE81B340;
+    color:rgb(120, 29, 66);
 }
