--- a/frontend/src/styles/Recommend.css
+++ b/frontend/src/styles/Recommend.css
@@ -1,10 +1,12 @@
 .recommend-slider {
-  max-width: 900px;
+  max-width: 1200px;
   margin: 20px 0;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 80vw;
 }
 
 .recommend-slider h2 {
@@ -24,16 +26,15 @@
   gap: 20px;
   justify-content: center;
   overflow: hidden;
-  flex-grow: 1;
+ 
 }
 
 .product-card {
-  flex: 0 0 200px;
+  
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #fff;
   text-align: center;
-  width: 250px;
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
