--- a/frontend/src/styles/Recommend.css
+++ b/frontend/src/styles/Recommend.css
@@ -71,10 +71,10 @@
 
 .left-arrow {
   position: absolute;
-  left: -40px;
+  /* left: -40px; */
 }
 
 .right-arrow {
   position: absolute;
-  right: -40px;
+  /* right: -40px; */
 }
